test/kind/wrong/type2.kk
type int
alias wrong = int<int>